Fixed small horizontal scroll on small mobile

--- a/src/styles/blog.module.sass
+++ b/src/styles/blog.module.sass
@@ -32,11 +32,10 @@ h1
     background: #fefefe
     padding: 3em 1.5em
 .blogPage
-    //background: blue
+    background: blue
     .appLogo
         &:after
             content: ' Blog'
-    //background: #fefefe
     outline: 5px red solid
     main
         min-height: 75vh
