--- a/src/styles/blogHeader.module.sass
+++ b/src/styles/blogHeader.module.sass
@@ -11,6 +11,7 @@
   text-align: right
   color: #fefefe
   display: flex
+  overflow: hidden
   //max-height: 30vh
   background: #282c34 url('../images/bg.svg') no-repeat center fixed
   background-size: cover
