--- a/src/styles/header.module.sass
+++ b/src/styles/header.module.sass
@@ -14,6 +14,7 @@
   min-height: 100vh
   background: #282c34 url('../images/bg.svg') no-repeat center fixed
   background-size: cover
+  overflow: hidden
 .appTitles
   opacity: 0.82
   width: 20em
